--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
 <h1 class="title">百炼为战纪念小站</h1>
     <!-- </div> -->
     <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://kmcbest.tk>kmcbest.tk</a>（优先），<a href=https://kmcbest.github.io>kmcbest.github.io</a>，<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>（墙外）</p>
-
-        <p><font color="FF0000"><b>百炼为战已于北京时间2023年1月14日凌晨2点11分正式关服</b></font>，衷心感谢各位在游戏中投入的热情与精力，感谢大家共同在新昆塔莎战斗过的日子和对本人和本站的关注。</p>
+        <p><b>2023年5月11日，百炼为战由Kabam卖给了Netflix（奈飞/网飞），以另一种方式重新上线</b>（<a href="https://play.google.com/store/apps/details?id=com.netflix.NGP.TransformersForgedToFight">谷歌商店</a>，<a href="https://apps.apple.com/us/app/transformers-forged-to-fight/id6444320431">苹果商店</a>）</p>
+        <ul>
+            <li>需要Netflix付费会员，国内需要科学上网方可注册</li>
+            <li>全新服务器从零开始，旧账号数据<b>不会</b>带过来</li>
+            <li>电影系人物全部删除，但加入了之前遗憾未问世的克劳莉娅和封锁</li>
+            <li>游戏没有内购和广告功能，完全依赖于Netflix的订阅</li>
+        </ul>
+        <p>因兴趣转变和事务繁忙，翻译官大概率不会再投入到这个游戏中，但是会做好测试和教程，帮助有需要的人继续享受新的征程。</p>
+        <hr>
+        <p><b>Kabam公司的百炼为战游戏已于北京时间2023年1月14日凌晨2点11分正式关服</b>，衷心感谢各位在游戏中投入的热情与精力，感谢大家共同在新昆塔莎战斗过的日子和对本人和本站的关注。</p>
     <ul>
         <li>百炼为战纪念馆（建设中，即将开馆）</li>
         <li><a href="chronicle.html">百炼为战大事记</a></li>
