--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
             <li>游戏没有内购和广告功能，完全依赖于Netflix的订阅</li>
         </ul>
         <p>因兴趣转变和事务繁忙，翻译官大概率不会再投入到这个游戏中，但是会做好测试和教程，帮助有需要的人继续享受新的征程。</p>
+
+        <ul>
+            <li> <a href="tftf_netflix/upandrunning.html">新百炼为战安装教程（不断更新完善中）</a></li>
+        </ul>
+        
         <hr>
         <p><b>Kabam公司的百炼为战游戏已于北京时间2023年1月14日凌晨2点11分正式关服</b>，衷心感谢各位在游戏中投入的热情与精力，感谢大家共同在新昆塔莎战斗过的日子和对本人和本站的关注。</p>
     <ul>
+        以下内容属于Kabam的百炼为战，可能不完全适用于新版Netflix百炼为战游戏，仅供参考。
+
         <li>百炼为战纪念馆（建设中，即将开馆）</li>
         <li><a href="chronicle.html">百炼为战大事记</a></li>
         <li><a href="protoform_book/index.html">《百炼为战：原生体成长记》——新手教程</a></li>
