更新常见问题

--- a/tftf_netflix/upandrunning.html
+++ b/tftf_netflix/upandrunning.html
@@ -38,7 +38,7 @@
 <div class="inner">
 <h1 class="title toc-ignore">新百炼为战安装教程（更新中）</h1>
 <h3 class="author">公理天城翻译官</h3>
-<h3 class="date">更新时间：2023-05-12</h3>
+<h3 class="date">更新时间：2023-05-13</h3>
 </div>
 </header>
 
@@ -58,6 +58,17 @@
 <li><a href="#注册账号" id="toc-注册账号">注册账号</a></li>
 <li><a href="#科学上网" id="toc-科学上网">科学上网</a></li>
 <li><a href="#启动游戏" id="toc-启动游戏">启动游戏</a></li>
+</ul></li>
+<li><a href="#常见问题" id="toc-常见问题">常见问题</a>
+<ul>
+<li><a href="#登录时提示密码错误明明密码是对的"
+id="toc-登录时提示密码错误明明密码是对的">登录时提示密码错误，明明密码是对的</a></li>
+<li><a href="#启动游戏报错" id="toc-启动游戏报错">启动游戏报错</a></li>
+<li><a href="#启动游戏后继续按钮死活点不上"
+id="toc-启动游戏后继续按钮死活点不上">启动游戏后“继续”按钮死活点不上</a></li>
+<li><a href="#启动游戏出现fbi-warning误"
+id="toc-启动游戏出现fbi-warning误">启动游戏出现FBI
+Warning（误）</a></li>
 </ul></li>
 </ul>
 </div>
@@ -135,6 +146,31 @@ Fight，就可以下载了。</p>
 <p><img src="upandrunning_insertimage_5.png" style="display: block; margin: auto;" /></p>
 <p>启动后会要你登录奈飞的账号，如果你的账号是淘宝上买的，应该还会给你一个PIN，让你选择一个头像来启动（一个奈飞账号可以拖5个亲情号，所以淘宝上的便宜）</p>
 <p><img src="upandrunning_insertimage_6.png" style="display: block; margin: auto;" /></p>
+</div>
+</div>
+<div id="常见问题" class="section level1">
+<h1>常见问题</h1>
+<div id="登录时提示密码错误明明密码是对的" class="section level2">
+<h2>登录时提示密码错误，明明密码是对的</h2>
+<p><img src="upandrunning_insertimage_7.png" style="display: block; margin: auto;" /></p>
+<p>这个问题由网友汇报，我用我的手机登录他们的账号就没有问题。经排查，是因为他们用的代理的问题，换过一种代理就行了。不过从他们的IP检测看，也确实是美国的IP，所以也很奇怪为什么Netflix的程序给出这么误导性的提示。</p>
+</div>
+<div id="启动游戏报错" class="section level2">
+<h2>启动游戏报错</h2>
+<p><img src="upandrunning_insertimage_8.png" style="display: block; margin: auto;" /></p>
+<p>上图的错误是游戏安装包不完整。注册谷歌对大游戏采用的是分离安装包（Split
+APK）的方式，不能让一个装好了百炼为战的朋友通过QQ发送应用的方式发给你，那样你收到的只是一个几十M的小安装包，而完整的安装包加起来有700多M。</p>
+</div>
+<div id="启动游戏后继续按钮死活点不上" class="section level2">
+<h2>启动游戏后“继续”按钮死活点不上</h2>
+<p><img src="upandrunning_insertimage_9.png" style="display: block; margin: auto;" /></p>
+<p>有两个朋友遇到过，据说也是代理节点的问题，但目前还在解决中。</p>
+</div>
+<div id="启动游戏出现fbi-warning误" class="section level2">
+<h2>启动游戏出现FBI Warning（误）</h2>
+<p><img src="upandrunning_insertimage_10.png" style="display: block; margin: auto;" /></p>
+<p>这个界面太熟悉了……然而并不是（笑）</p>
+<p>这个界面据说也是没开代理的原因。</p>
 </div>
 </div>
     </section>
