--- a/tftf_netflix/upandrunning.html
+++ b/tftf_netflix/upandrunning.html
@@ -15,7 +15,7 @@
 
 <title>新百炼为战安装教程（更新中）</title>
 
-<script src="upandrunning_files/header-attrs-2.16/header-attrs.js"></script>
+<script src="upandrunning_files/header-attrs-2.21/header-attrs.js"></script>
 
 
 
@@ -38,7 +38,7 @@
 <div class="inner">
 <h1 class="title toc-ignore">新百炼为战安装教程（更新中）</h1>
 <h3 class="author">公理天城翻译官</h3>
-<h3 class="date">更新时间：2023-05-13</h3>
+<h3 class="date">更新时间：2023-06-12</h3>
 </div>
 </header>
 
@@ -134,7 +134,9 @@ Fight，就可以下载了。</p>
 <h2>注册账号</h2>
 <p>对奈飞而言，百炼为战是视频会员的福利（想必是为了蹭电影热度便宜从卡邦买过来拉点人气），游戏是完全免费的（没有广告，也完全没有氪金的功能），听上去很不错，但是——没会员你连游戏都进不了！</p>
 <p>奈飞的服务不对中国大陆开放，就算翻出去，要注册一个奈飞会员并付费，就需要Master/Visa卡之类的国际支付渠道，也是很麻烦的事情，价格也很高。但好就好在这是正规渠道，资金和支付能力OK的朋友优先选这种吧。</p>
-<p>嫌麻烦的可以去淘宝找合租/代充账号，我和几个热心网友已经尝试过，确实能用。不过一定要问清楚是不是独享的，因为有些合租的虽然便宜，但是每个月会换号，换号对于看视频的朋友没有什么问题，我们打百炼的可不能每月从头练。要跟店家说清楚是为了玩游戏，不能接受换号，对方如果表示没有那就不要选这家，价钱会贵一点，但肯定比付美元要便宜。</p>
+<p>由于淘宝代充有停号的风险，还是推荐自己注册，因为一个账号下可以挂五个游戏账号，所以只要找到五个玩家团，算下来也不贵。只要找一个买国际礼金卡的渠道就行，上闲鱼可以找到。</p>
+<p><strong>已经出现店家跑路的现象，不推荐</strong>
+<del>嫌麻烦的可以去淘宝找合租/代充账号，我和几个热心网友已经尝试过，确实能用。不过一定要问清楚是不是独享的，因为有些合租的虽然便宜，但是每个月会换号，换号对于看视频的朋友没有什么问题，我们打百炼的可不能每月从头练。要跟店家说清楚是为了玩游戏，不能接受换号，对方如果表示没有那就不要选这家，价钱会贵一点，但肯定比付美元要便宜。</del></p>
 </div>
 <div id="科学上网" class="section level2">
 <h2>科学上网</h2>
