--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <h1 class="title">百炼为战纪念小站</h1>
     <!-- </div> -->
-    <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://www.kmcbest.top>www.kmcbest.top</a>，<a href=https://kmcbest.github.io>kmcbest.github.io</a>，<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>（墙外）</p>
+    <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://www.kmcbest.fun>www.kmcbest.fun</a>（新域名）<a href=https://www.kmcbest.top>www.kmcbest.top</a>（2024年5月24日过期），<a href=https://kmcbest.github.io>kmcbest.github.io</a>（墙外），<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>（墙外）</p>
         <p><b>2023年5月11日，百炼为战由Kabam卖给了Netflix（奈飞/网飞），以另一种方式重新上线</b>（<a href="https://play.google.com/store/apps/details?id=com.netflix.NGP.TransformersForgedToFight">谷歌商店</a>，<a href="https://apps.apple.com/us/app/transformers-forged-to-fight/id6444320431">苹果商店</a>）</p>
         <ul>
             <li>需要Netflix付费会员，国内需要科学上网方可注册</li>
