--- a/typetest/spelltest.html
+++ b/typetest/spelltest.html
@@ -148,7 +148,7 @@
             inputFile.click();
         });
         window.onload = function () {
-            document.getElementById('csvUrl').value = 'word.csv';  // 默认显示 word.csv
+            document.getElementById('csvUrl').value = 'words.csv';  // 默认显示 word.csv
         };
         // 加载网络CSV文件
         document.getElementById('loadUrlBtn').addEventListener('click', function () {
