--- a/typetest/spelltest.html
+++ b/typetest/spelltest.html
@@ -23,6 +23,7 @@
 
         h1 {
             text-align: center;
+            font-size: 16px;
         }
 
         .input-container {
@@ -33,14 +34,14 @@
 
         .input-container input {
             padding: 10px;
-            font-size: 18px;
-            width: 200px;
+            font-size: 14px;
+            width: 150px;
         }
 
         .input-container button {
-            padding: 10px 20px;
+            padding: 5px 10px;
             margin-left: 10px;
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
         }
 
@@ -64,8 +65,8 @@
 
         .progress {
             text-align: center;
-            font-size: 18px;
-            margin-bottom: 20px;
+            font-size: 14px;
+            margin-bottom: 12px;
         }
 
         .controls {
@@ -74,7 +75,7 @@
 
         .controls button {
             padding: 10px 20px;
-            font-size: 16px;
+            font-size: 12px;
             cursor: pointer;
             margin: 5px;
         }
@@ -87,9 +88,9 @@
         <h1>typing test</h1>
 
         <div class="controls">
-            <button id="loadLocalBtn">加载本地CSV</button>
+            <button id="loadLocalBtn">本地CSV</button>
             <input type="text" id="csvUrl" placeholder="输入CSV文件网址">
-            <button id="loadUrlBtn">加载网络CSV</button>
+            <button id="loadUrlBtn">网络CSV</button>
         </div>
 
         <div class="settings hidden">
