--- a/typetest/spelltest.html
+++ b/typetest/spelltest.html
@@ -47,8 +47,8 @@
 
         .message {
             text-align: center;
-            font-size: 18px;
-            margin-top: 20px;
+            font-size: 16px;
+            margin-top: 18px;
         }
 
         .message.correct {
@@ -71,10 +71,11 @@
 
         .controls {
             text-align: center;
+            /* width: 150px; */
         }
 
         .controls button {
-            padding: 10px 20px;
+            padding: 5px 10px;
             font-size: 12px;
             cursor: pointer;
             margin: 5px;
