--- a/typetest/spelltest.html
+++ b/typetest/spelltest.html
@@ -80,6 +80,16 @@
             cursor: pointer;
             margin: 5px;
         }
+
+        .controls input[type="text"] {
+            width: 100px;
+            padding: 5px;
+            /* 可选：根据需要调整内边距 */
+            font-size: 12px;
+            /* 可选：保持字体大小一致 */
+            margin: 5px;
+            /* 可选：保持与其他元素的间距一致 */
+        }
     </style>
 </head>
 
