--- a/rewardwall.html
+++ b/rewardwall.html
@@ -71,8 +71,8 @@ select,input[type=text],input[type=password],input[type=number],textarea{width:1
 
     <div style="margin-left:auto;display:flex;gap:8px;align-items:center;flex-wrap:wrap">
       <button id="exchange-btn" class="btn">兑奖</button>
-      <button id="sync-load" class="btn">从JSONBin加载</button>
-      <button id="sync-save" class="btn">保存到JSONBin</button>
+      <button id="sync-load" class="btn">GET</button>
+      <button id="sync-save" class="btn">PUT</button>
       <button id="clear-all" class="btn" style="background:#ffb3b3;">清空所有</button>
     </div>
   </div>
