--- a/watchlist.html
+++ b/watchlist.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Watchlist</title>
 
-    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
@@ -62,11 +61,12 @@
             <p class="mt-2 text-center text-sm text-slate-500">管理关注女优与作品 — 支持编辑 / 排序 / 搜索站点</p>
         </header>
 
-        <!-- 操作区：添加 & 排序开关 -->
         <div class="mb-4 flex flex-wrap gap-3 items-center justify-between">
             <div class="flex gap-3">
                 <button id="addActress" class="px-3 py-1 rounded bg-indigo-600 text-white hover:bg-indigo-700">+
                     添加女优</button>
+                <button id="saveAllBtn"
+                    class="px-3 py-1 rounded bg-emerald-600 text-white hover:bg-emerald-700">保存所有改动</button>
 
                 <button id="toggleSortMode"
                     class="px-3 py-1 rounded border border-slate-200 bg-white hover:bg-slate-50">
@@ -79,15 +79,13 @@
                     class="px-3 py-1 rounded border border-slate-200 bg-white hover:bg-slate-50 hidden">取消排序</button>
             </div>
 
-            <div class="text-sm text-slate-500">提示：进入排序模式后，使用左右的按钮调整顺序，完成后点击“保存排序”。</div>
+            <div class="text-sm text-slate-500">提示：所有改动将暂存本地，请点击“保存所有改动”上传。</div>
         </div>
 
-        <!-- 女优列表 -->
         <section class="mb-6">
             <div id="actressList" class="space-y-4"></div>
         </section>
 
-        <!-- Site List 编辑区 -->
         <section class="bg-white rounded-lg shadow p-5">
             <h2 class="text-lg font-medium mb-2">搜索站点列表</h2>
             <p class="text-sm text-slate-500 mb-2">每行一个站点名，例如：<code class="bg-slate-100 px-1 rounded">xasiat</code></p>
@@ -100,10 +98,8 @@
         </section>
     </div>
 
-    <!-- 站点弹出菜单 -->
     <div id="sitePopup" class="site-popup hidden"></div>
 
-    <!-- Toast 提示 -->
     <div id="toast" class="toast px-4 py-2 rounded shadow bg-yellow-300 text-slate-800"></div>
 
     <script>
@@ -116,7 +112,9 @@
 
         // 全局数据（runtime）
         let data = {
-            config: { sitelist: [] },
+            config: {
+                sitelist: []
+            },
             actresses: []
         };
 
@@ -175,11 +173,20 @@
                 const matchNotDone = line.match(/^\s*-\s*\[\s\]\s*(.+)$/);
 
                 if (matchDone) {
-                    return { title: matchDone[1].trim(), done: true };
+                    return {
+                        title: matchDone[1].trim(),
+                        done: true
+                    };
                 } else if (matchNotDone) {
-                    return { title: matchNotDone[1].trim(), done: false };
+                    return {
+                        title: matchNotDone[1].trim(),
+                        done: false
+                    };
                 } else {
-                    return { title: line.trim(), done: false };
+                    return {
+                        title: line.trim(),
+                        done: false
+                    };
                 }
             });
         }
@@ -188,16 +195,11 @@
             return works.map(w => w.done ? `- [x] ${w.title}` : `- [ ] ${w.title}`).join('\n');
         }
 
-        async function saveToCloud(payload = null) {
+        async function saveToCloud() {
             try {
-                // 如果传了 payload 就用它（用于保存排序时），否则用全局 data
-                const toSave = payload || data;
-                await updateData(toSave);
-                showToast('已保存到云端！');
-                // 如果保存后是成功保存排序，要同步主 data
-                if (payload) {
-                    data = JSON.parse(JSON.stringify(payload));
-                }
+                // 只保存主 data
+                await updateData(data);
+                showToast('所有改动已保存到云端！');
             } catch (err) {
                 showToast(err.message || '保存失败', true);
             }
@@ -214,8 +216,9 @@
         document.getElementById('saveSiteList').addEventListener('click', () => {
             const text = document.getElementById('siteListInput').value;
             data.config.sitelist = text.split('\n').map(s => s.trim()).filter(s => s !== '');
-            saveToCloud();
+            showToast('站点列表已更新到本地，请点击“保存所有改动”上传。');
         });
+
         document.getElementById('resetSiteList').addEventListener('click', () => {
             renderSiteList();
             showToast('已恢复为当前数据');
@@ -231,8 +234,18 @@
                 works: []
             });
             renderActressList();
-            saveToCloud();
+            showToast('新女优已添加，请点击“保存所有改动”上传。');
         });
+
+        // 新增：保存所有改动
+        document.getElementById('saveAllBtn').addEventListener('click', async () => {
+            if (sortMode) {
+                showToast('请先完成排序或取消排序操作。', true);
+                return;
+            }
+            await saveToCloud();
+        });
+
 
         // 排序模式切换按钮绑定
         const toggleSortBtn = document.getElementById('toggleSortMode');
@@ -271,22 +284,20 @@
 
         saveSortBtn.addEventListener('click', async () => {
             if (!stagingActresses) return;
-            const payload = {
-                ...data,
-                actresses: JSON.parse(JSON.stringify(stagingActresses))
-            };
-            await saveToCloud(payload);
-            // 应用到主 data，并退出排序模式
-            data = payload;
+            // 将排序后的 stagingActresses 同步回主 data
+            data.actresses = JSON.parse(JSON.stringify(stagingActresses));
+
+            // 退出排序模式
             sortMode = false;
             stagingActresses = null;
             toggleSortBtn.textContent = '排序模式';
             saveSortBtn.classList.add('hidden');
             cancelSortBtn.classList.add('hidden');
+
             renderActressList();
+            showToast('排序已保存到本地，请点击“保存所有改动”上传。');
         });
 
-        // 渲染所有女优（根据 sortMode 决定用 data.actresses 还是 stagingActresses）
         // 渲染所有女优（根据 sortMode 决定用 data.actresses 还是 stagingActresses）
         function renderActressList() {
             const container = document.getElementById('actressList');
@@ -330,7 +341,7 @@
                     const arr = sortMode ? stagingActresses : data.actresses;
                     if (!arr || !arr[idx]) return;
                     arr[idx].expanded = !arr[idx].expanded;
-                    if (!sortMode) saveToCloud(); // 非排序模式立即保存
+                    if (!sortMode) showToast('已更新到本地，请点击“保存所有改动”上传。');
                     renderActressList(); // 重新渲染
                 });
 
@@ -344,7 +355,10 @@
                         b.className = 'text-sm px-2 py-1 rounded hover:bg-slate-100';
                         b.title = title;
                         b.textContent = text;
-                        b.onclick = (ev) => { ev.stopPropagation(); handler(); };
+                        b.onclick = (ev) => {
+                            ev.stopPropagation();
+                            handler();
+                        };
                         return b;
                     };
                     rightBox.appendChild(mkBtn('🔝', '置顶', () => moveActress(idx, 'top')));
@@ -367,7 +381,7 @@
                     } else {
                         data.actresses.splice(idx, 1);
                     }
-                    if (!sortMode) saveToCloud();
+                    if (!sortMode) showToast('已删除，请点击“保存所有改动”上传。');
                     renderActressList();
                 };
                 rightBox.appendChild(delBtn);
@@ -398,7 +412,7 @@
                         const arr = sortMode ? stagingActresses : data.actresses;
                         if (!arr || !arr[idx]) return;
                         arr[idx].works = parseWorks(text);
-                        if (!sortMode) saveToCloud();
+                        if (!sortMode) showToast('作品已更新到本地，请点击“保存所有改动”上传。');
                         renderActressList();
                     };
 
@@ -451,15 +465,9 @@
                 cb.checked = work.done;
                 cb.onchange = (e) => {
                     work.done = cb.checked;
-                    // 如果在排序模式下，修改 staging，否则修改 data
-                    if (isStaging) {
-                        // stagingActresses already references correct object
-                    } else {
-                        // 保存勾选状态
-                        saveToCloud();
-                    }
                     // 只重新渲染 the list
                     renderActressList();
+                    showToast('已更新到本地，请点击“保存所有改动”上传。');
                 };
 
                 const titleSpan = document.createElement('span');
@@ -536,7 +544,9 @@
                 console.error(err);
             }
 
-            if (!data.config) data.config = { sitelist: [] };
+            if (!data.config) data.config = {
+                sitelist: []
+            };
             if (!data.actresses) data.actresses = [];
 
             renderSiteList();
