--- a/rewardwall.html
+++ b/rewardwall.html
@@ -106,7 +106,7 @@ const CLEAR_PASSWORD_SHA256 = "b575e13270b4785f35ab667154d178d97dc4ecd1564e094db
 const STORE_KEY = 'reward_wall_data_v1';
 let events = {};              // { "YYYY-MM-DD": [ {id, reason, createdAt, exchanged} ] }
 let selectedDate = null;
-const commonReasons = ["好好吃饭","睡觉早","自己做家务","完成作业","坚持运动","帮助他人"];
+const commonReasons = ["好好吃饭","睡觉早","自己做家务","阅读打卡一次","完成作业","坚持运动","帮助他人"];
 
 const grid = document.getElementById('calendar-grid');
 const monthSelect = document.getElementById('month-select');
